# OpenCL

./: .gitignore  CMakeLists.txt  README.md  ocl.tgz
lib/: ocl_utils.c
mandelbrot/: README.md  image_helper.c  image_helper.h  kernel.cl  main.c
ocl/mandelbrot/: main  main.c
ocl/ocl_add_numbers/: add_numbers_ocl  kernel.cl  main.c
ocl/pi/: main.c
opencl-vb1/: kernel.cl  main.c
opencl-vb2/: kernel.cl  main.c
pi/: kernel.cl  main.c
